--- a/produtos/templates/produtos/list.html
+++ b/produtos/templates/produtos/list.html
@@ -6,11 +6,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Área Administrativa</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
-    <h1>teste</h1>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Catalogo</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" id="search" type="search" placeholder="Produto para buscar" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+
+        <div class="offset-1 col-10 list-div">
+            <h1>Lista de Produtos</h1>
+            <div class="col-2 add-div">
+                <i class="bi bi-plus-lg">Adicionar Produto</i>
+            </div>
+            <ul class="produto-list">
+                <li class="item-produto">
+                    <span> <img src="" alt=""></span>
+                    <span>Nome</span>
+                    <span><i class="bi bi-trash"></i></span>
+                    <span><i class="bi bi-pencil"></i></span>
+                    
+                </li>
+            </ul>
+        </div> 
+
+        <footer>
+            <p>Anas Loja 
+                <br>
+                Manaus-AM
+            </p>
+            <div class="redes">
+                <a href="" class="instagram"></a>
+                <a href="" class="whatsapp"></a>
+            
+            </div>
+        </footer>
+    </div>
+    
 
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script> 
