upload de imagem

--- a/produtos/templates/produtos/list.html
+++ b/produtos/templates/produtos/list.html
@@ -35,11 +35,11 @@
         <div class="offset-1 col-10 list-div">
             <h1>Lista de Produtos</h1>
             <div class="col-2 add-div">
-                <i class="bi bi-plus-lg">Adicionar Produto</i>
+                <i class="bi bi-plus-lg"> Adicionar Produto</i>
             </div>
             <ul class="produto-list">
                 <li class="item-produto">
-                    <span> <img src="" alt=""></span>
+                    <span> <img class="imagem-list" src="{% static 'img/img1.jpg' %}"" alt=""></span>
                     <span>Nome</span>
                     <span><i class="bi bi-trash"></i></span>
                     <span><i class="bi bi-pencil"></i></span>
@@ -54,8 +54,8 @@
                 Manaus-AM
             </p>
             <div class="redes">
-                <a href="" class="instagram"></a>
-                <a href="" class="whatsapp"></a>
+              <a href="https://www.instagram.com/anaslojaoficial/" target="_blank" title="Instragram" class="instagram"><i class="bi bi-instagram"></a></i>
+                <a href="https://api.whatsapp.com/send/?phone=5592981369611&text&type=phone_number&app_absent=0" target="_blank" title="WhatsApp" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
             
             </div>
         </footer>
