--- a/produtos/static/css/styles.css
+++ b/produtos/static/css/styles.css
@@ -27,11 +27,12 @@
 .add-div{
     background-color: #3476e2;
     cursor: pointer;
-    display: block;
-    color: aliceblue;
+    display: inline-block;
+    color: #FFF;
     padding: 8px;
     border-radius: 5px;
     margin-right: 25px;
+    
 }
 
 .bi.bi-plus-lg{
@@ -50,10 +51,14 @@
     padding-left: 0;
 }
 
+.imagem-list{
+    height: 50px;
+}
+
 .item-produto {
     list-style: none;
     font-size: 20px;
-    height: 50px;
+    height: 65px;
     padding-top: 10px;
     border-bottom: 1px dashed #ccc;
 }
@@ -70,14 +75,28 @@
 
 footer {
     
-    background-color: #333;
+    background-color: #ed4956;
     height: 150px;
     border-top: 2px solid #202020;
 }
 
 footer p {
-    color: antiquewhite;
+    color: #FFF;
     text-align: center;
     top: 30%;
     position: relative;
+}
+
+.redes {
+    text-align: center;
+    display: block;
+    padding-top: 30px;
+    
+}
+
+.bi.bi-instagram, .bi.bi-whatsapp{
+    cursor: pointer;
+    color: #FFF;
+    margin: 5px;
+    font-size: 20px;
 }
